# GrayScott

exercises/: .gitignore  Cargo.toml
exercises/.cargo/: config.toml
exercises/benches/: 06-summit.rs  simulate.rs
exercises/examples/: 00-hello.rs  01-let-it-be.rs  02-numerology.rs  03-looping.rs  04-square-one.rs  05-hadamantium.rs
exercises/src/: data.rs  io.rs  lib.rs  options.rs
