[package]
name = "grayscott-exercises"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
hdf5 = { package = "hdf5-metno", version = "0.9.2" }
hwlocality = "1.0.0-alpha.5"
indicatif = "0.17.8"
iterator_ilp = "2.1.2"
multiversion = "0.7.4"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "06-summit"
harness = false

[[bench]]
name = "simulate"
harness = false

[profile.release]
# Ensure reproducible codegen in benchmarks, at the expense of compilation
# performance (loss of parallel LLVM execution).
codegen-units = 1
